<?xml version="1.0"?>
<package format="2">
  <name>bluesea2</name>
  <version>1.0.0</version>
  <description>The bluesea2 package</description>
  <maintainer email="zr@todo.todo">zr</maintainer>
  <license>TODO</license>
  <build_depend>message_generation</build_depend>
  
  
  <!-- <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group> -->

  <exec_depend>message_runtime</exec_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rosconsole</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <!-- <build_depend>dynamic_reconfigure</build_depend> -->
  <build_export_depend>rosconsole</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_srvs</build_export_depend>
  <!-- <build_export_depend>dynamic_reconfigure</build_export_depend> -->
  <exec_depend>rosconsole</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>


  <build_depend>std_srvs</build_depend>
  <build_export_depend>std_srvs</build_export_depend>
  <exec_depend>std_srvs</exec_depend>
  <export>
  <build_type>ament_cmake</build_type>
  </export>
</package>