<?xml version="1.0"?>
<package format="3">
  <name>bluesea2</name>
  <version>1.0.0</version>
  <description>The bluesea2 package</description>
  <maintainer email="zr@todo.todo">zr</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>base</depend>

  <export>
  <build_type>ament_cmake</build_type>
  </export>
</package>
